--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">Tutorials</string>
-    <string name="let_s_count_to_gather_0">Let\'s count to Gather: 0</string>
+    <string-array name="months">
+        <item>January</item>
+        <item>February</item>
+        <item>march</item>
+        <item>April</item>
+        <item>May</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
+    </string-array>
 </resources>
